# ha-xbox360-aurora

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements-test.txt
.github/workflows/: test.yml  validate.yml
custom_components/xbox360_aurora/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  ftp.py  image.py  manifest.json  nova.py  sensor.py  services.yaml  strings.json  switch.py  titles.json  titles.py
custom_components/xbox360_aurora/translations/: en.json  es.json  pt-BR.json  pt.json
docs/superpowers/plans/: 2026-05-26-xbox360-aurora-ha-integration.md
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_const.py  test_diagnostics.py  test_events.py  test_ftp.py  test_image.py  test_init.py  test_nova.py  test_sensor.py  test_switch.py  test_titles.py
